# kernel-of-truth

./: .gitignore  .roborev.toml  CLAUDE.md  README.md  SNAPSHOT-RECEIPT.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
analysis/: a5.py  a5_llm.py  a5_nl.py  a_f0_mint_economics.py  casc_0.py  ddc0.py  ddc0_stdin.py  ddc1.py  ddc1_stdin.py  deconf_b.py  engine_inference_stdin.py  f1.py  f1k.py  f2.py  f2b_errors.py  f2b_replicate.py  f2b_transfer.py  f2b_transfer_llmproxy.py  g2.py  g3.py  g3_llmproxy.py  g3_llmproxy_v2.py  g3_llmproxy_v3.py  g6.py  g7.py  g8.py  g9.py  g9_llmproxy.py  generic_store_external_gold_stdin.py  glm_edrop_0_stdin.py  glm_s4drop_stdin.py  knull.py  knull_v3.py  knull_v3_stdin.py  l3a_parse.py  largekern10k.py  m0a_llmproxy.py  m0b.py  nsk1.py  nsk1_r3.py  (+13 more)
data/: .gitignore  validate.mjs
docs/: architecture.md  design-a5-code-worldlayer-oracle.md  design-a5-llm.md  design-bulk-kernel.md  design-claims-envelope-corrections.md  design-compact-kernel-serialization-v2.md  design-compact-kernel-serialization.md  design-constraint-layer.md  design-dl-from-nsm-and-lean-reconstruction.md  design-efficiency-track.md  design-hash-input.md  design-incremental-remint.md  design-knull-content-injection-ablation.md  design-kot-query-define-op.md  design-l3a-rules-engine-oracle.md  design-lean-route.md  design-math-sector.md  design-molecule-tier.md  design-neurosym-kernel-internals.md  design-nl-boundary-l3a-parse-a5-nl.md  design-physics-sector.md  poc-design.md  (+4 more)
poc/rules-1/conformance/: Cargo.toml
poc/rules-1/conformance/src/: main.rs
(+21290 files in other folders)
