# RULES-1 conformance driver — sparq-reason (primary engine, MD-4a) run over
# the SAME compiled rules.n3 + per-item facts as the Python differential twin;
# exact agreement on Cl(S) required per PROPOSED-ASM-1124.
[package]
name = "rules1-conformance"
version = "0.1.0"
edition = "2021"

[dependencies]
sparq-reason = { path = "/home/ec2-user/css/kernel/sparq/crates/sparq-reason", default-features = false }
sparq-core = { path = "/home/ec2-user/css/kernel/sparq/crates/sparq-core", default-features = false }

[workspace]
